util: update release.sh